tasks/version0.2.5/outline.md
# Outline

## Goals for this Version
1. Remove ALL 'f-strings' for html generation --> replacing them with htpy library syntax.
    - This means that for every html writing related file in the src/ directory, you should be checking for f-strings related to the HTML markup.
    - this means that for every test in the tests/ directory, you should make sure you are not creating any html markup with f-strings, you should only be creating them with htpy.
2. Apply json_schema_v2.md to json generation for better output.

## Pre-Project Workflow
Here are a list of things to check / setup before you start working:
1. Ensure /tasks/version{this-version}/ directory is created.
2. Ensure a plan.md is created in this version's tasks directory, it will be empty for now.
3. Read the previous's versions directory and its file such as plan.md and other files to understand the most up to date code.
4. Read the ALL of the htpy library sytanx located in docs/htpy/*.md -- It is very important to load it into context before you move on (even if you won't use 100% of the documentation).

## Project Workflow
We will implement a workflow ON TOP of the workflow already presented in {.gemini/GEMINI.md}. This workflow will be for both goals separately. 

1. Read the GEMINI.md file in its ENTIRETY to understand the standardizations for coding and the overall goal for this software.
2. Make sure you have read the previous version's directory and its files so that you have an understanding of what you're working with..
3. Make sure you have read the previous version's git commits and understood it.
4. Create a plan.md based on the goals that have phases, tasks and subtasks
    - You may look in the Gemini.md example or the previous version's plan.md for an example of the format, not the content.
5. Implement the task-by-task workflow stated in the GEMINI.md file.
    - Your first task will be reading documentation. It is HIGHLY important you do this thoroughly. 
6. Continue code --> testing --> debug --> repeat. 
    - When coding / testing you should NEVER use anything that starts with `pip` or `python`. Everything should be used with the `uv` program like `uv run main.py` or `uv pytest`. 
    - For **EVERY** new feature you write, you **MUST** create a test case for its functionality. To write test cases examine the broken down powerpoint presentation of the galaxy presentation in temp_pptx/
    - Each test must be named according to its feature, nothing to do with its version.
7. Repeat 5 & 6 for each subtask within a task.
8. Perform "user testing"
    - Simulates what it would be like if a user would run the package.
    - Uses `main.py` to user test
    - Examine the output of the user test via the output folder (ex: the html/json file) and check if the outcome is desired.
    - If the desired has NOT been desired go back to step 6.
9. Use `ruff` to check formating and lintting of the code. Make sure you fix all ruff callouts.
9. After a task has been completed. Create a task{N}.md file in the /tasks/version{this-version}/ directory and journal about this task as described in the GEMINI.md file.
10. Repeat steps 5-9 for each phase in plan.md

## Post-Project Workflow
1. After all phases have been achieved for this version. Clean up your code ( remove print statements and debug statements ).
2. Git add, commit and push your code to GitHub. 

## Notes
- you should should only use uv commands to test and user test no python commands.
- main.py is the only way you should user test.
- If you have trouble editing a file more than 3 times, provide me the edit and I will do it manually so you can continue.
